--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -1,1 +1,20 @@
-//todo: complete missing code..
+<div class="container">
+  <h2>LOGISTIC MANAGEMENT SYSTEM</h2>
+  <p>Please enter your user and password</p>
+    <form [formGroup]="itemForm" (ngSubmit)="onLogin()">
+      <div class="form-group">
+        <label for="username">Username:</label>
+        <input type="text" id="username" placeholder="name@example.com" formControlName="username">
+      </div>
+      <div class="form-group">
+        <label for="password">Password:</label>
+        <input type="password" id="password" placeholder="*******" formControlName="password">
+      </div>
+      <button type="submit" class="btn btn-primary" [disabled]="itemForm.invalid">Login</button>
+    </form>
+    <div *ngIf="showError"  class="error-message">{{ errorMessage }}</div>
+    <div class="register-link">
+      <p id="noAcc">Don't have an account? <a routerLink="/registration"><strong>Registration</strong></a></p>
+    </div>
+  </div>
+  
