--- a/client/src/app/viewcargostatus/viewcargostatus.component.html
+++ b/client/src/app/viewcargostatus/viewcargostatus.component.html
@@ -1,1 +1,24 @@
-//todo: complete missing code.
+<div class="container">
+    <h2>Cargo Status</h2>
+    <div class="form-group">
+      <label for="cargoId">Cargo ID:</label>
+      <input type="text" id="cargoId" [(ngModel)]="cargoIdMd" class="form-control" placeholder="Enter Cargo ID">
+      <button (click)="search()" class="btn btn-primary">Search</button>
+    </div>
+    
+    <div *ngIf="showError" class="alert alert-danger" role="alert">
+      {{ errorMessage }}
+    </div>
+  
+    <div *ngIf="!showError">
+      <h3>Cargo Details</h3>
+      <ul>
+        <li><strong>Cargo Id:</strong> {{ cargo.id }}</li>
+        <li><strong>Cargo Content:</strong> {{ cargo.content }}</li>
+        <li><strong>Delivery Status:</strong> {{ cargo.status }}</li>
+        
+        <!-- <li><strong>Delivery Date:</strong> {{ cargo.deliveryDate }}</li> -->
+      </ul>
+    </div>
+  </div>
+  
